# csc752-final-project

./: CMakeLists.txt  EXPLORATION_SUMMARY.txt  INSTRUCTIONS.md  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  csc752-final-project-start.py  data.txt  package.xml  plane_detection.rviz  requirements.txt
backup/: CMakeLists.txt  README.md  csc647-final-project-start.py  package.xml
backup/launch/: lidar_mesh_processing.launch  lidar_mesh_with_isaac.launch  visualization_only.launch
catkin_ws/src/hsr_plane_detection/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hsr_plane_detection/launch/: plane_detection.launch  plane_detection_from_depth.launch
catkin_ws/src/hsr_plane_detection/scripts/: depth_processor_node.py  plane_detection_node.py
config/: lidar_params.yaml
doc/: CODEBASE_EXPLORATION.md  EXPLORATION_INDEX.md  GUIDE.md  PLANE_DETECTION_GUIDE.md  ROS_ARCHITECTURE.txt
hsr_plane_detection/: README.md  package.xml
launch/: lidar_mesh_processing.launch  lidar_mesh_with_isaac.launch  plane_detection_with_isaac.launch  visualization_only.launch
output/: plane_detection_log_20251210_143703.txt
rviz/: lidar_mesh_visualization.rviz  plane_detection.rviz
scripts/: hough_transform_processor.py  lidar_activator.py  point_cloud_to_mesh.py
