<?xml version="1.0"?>
<package format="2">
  <name>csc752-final-project</name>
  <version>0.1.0</version>
  <description>
    LiDAR mesh generation package for HSR robot.
    Activates LiDAR sensor, processes point cloud data, and generates meshes for analysis.
  </description>

  <maintainer email="pas273@miami.edu">CSC 752 Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS dependencies -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Point cloud processing -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- TF for coordinate transforms -->
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <!-- For RViz visualization -->
  <depend>rviz</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
  </export>
</package>
